--- a/style.css
+++ b/style.css
@@ -1,39 +1,44 @@
 * {
-  box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
 }
+
 html,
 body {
-  height: 100vh;
   width: 100%;
-  font-family: 'Montserrat', sans-serif;
-  background-color: #000;
+  height: 100vh;
+  font-family: 'Montserrat';
+  background: #000100;
   color: #fff;
   overflow: hidden;
 }
+
 ul {
   list-style: none;
 }
+
 img {
   width: 100%;
   height: auto;
   z-index: -1;
 }
+
 .nav {
   position: fixed;
   width: 100%;
   height: 100px;
   z-index: 1;
 }
+
 .border-bottom {
   position: absolute;
   top: 100px;
   width: 0%;
   z-index: 1;
-  border-color: rgba(255, 255, 255, 0.5);
+  border-color: rgba(255, 255, 255, 0.2);
   border-width: 0.5px;
 }
+
 .logo,
 .menu-links,
 .search,
@@ -41,34 +46,50 @@ img {
   position: absolute;
   padding: 20px;
 }
+
 .logo {
   width: 100px;
 }
+
 .menu-links {
   left: 100px;
-  margin-left: 30px;
   line-height: 1;
+  margin-left: 30px;
 }
+
 .menu-links ul li {
   display: inline-block;
   padding: 20px 30px;
   color: rgba(255, 255, 255, 0.5);
 }
+
 .search,
 .cart {
   line-height: 3;
   font-size: 20px;
 }
+
+.search {
+  right: 150px;
+}
+
+.cart {
+  right: 50px;
+}
+
 .text {
   position: absolute;
   top: 420px;
-  transform: translate(-50%, -50%);
   left: 450px;
+  transform: translate(-50%, -50%);
+  z-index: 1;
 }
+
 .subtitle {
   text-transform: uppercase;
   font-size: 14px;
 }
+
 .subtitle::before {
   display: inline-block;
   content: '';
@@ -77,6 +98,7 @@ img {
   margin: 0 10px 0 0;
   transform: translateY(-4px);
 }
+
 .title {
   font-size: 120px;
   text-transform: uppercase;
@@ -84,6 +106,7 @@ img {
   overflow: hidden;
   white-space: nowrap;
 }
+
 .desc {
   color: rgba(255, 255, 255, 0.5);
   margin-top: 40px;
@@ -100,6 +123,7 @@ img {
   padding-bottom: 3px;
   font-weight: bolder;
 }
+
 .img-1 {
   position: absolute;
   top: 300px;
